# fastapi-blueprint

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pytest.ini  ruff.toml
migrations/: env.py  script.py.mako
src/: main.py  routes.py
src/api/middleware/: error_handling.py  request_logging.py
src/api/v1/: __init__.py
src/api/v1/endpoints/: healthz.py
src/core/: config.py  enums.py  exceptions.py  logging.py  security.py
src/crud/: base.py
src/db/: base.py  session.py
src/domain/shared/: util.py
tests/: conftest.py
tests/unit/api/v1/endpoints/: test_healthz.py
