[project]
name = "fastapi-blueprint"
version = "0.1.0"
description = "FastAPI blueprint for large scale applications"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Guilherme Rodrigues", email = "guilherme.b.rodrigues@skf.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
